Add more java deps, and examples for importing java. Add support for drip.